Do fixes on booking screen, add animation for booking holder

--- a/modules/base/base_ui/src/main/res/values/colors.xml
+++ b/modules/base/base_ui/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="dove_gray">#676767</color>
     <color name="gallery">#F0F0F0</color>
     <color name="mercury">#E3E3E3</color>
+    <color name="mine_shaft">#272727</color>
     <color name="night_rider">#040302</color>
     <color name="nobel">#B3B3B3</color>
     <color name="pastel_green">#73DE73</color>
