--- a/modules/base/base_ui/src/main/res/values/styles.xml
+++ b/modules/base/base_ui/src/main/res/values/styles.xml
@@ -8,7 +8,7 @@
         <item name="android:elevation">0dp</item>
         <item name="android:gravity">center</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:textAppearance">@style/Theme.Ava.TextAppearance.Button</item>
+        <item name="android:textAppearance">@style/Theme.Table.TextAppearance.Button</item>
         <item name="android:textColor">@color/primary_button_text</item>
         <item name="android:backgroundTint">@color/primary_button_bg</item>
         <item name="cornerRadius">@dimen/corner_radius_large</item>
@@ -26,7 +26,7 @@
         <item name="cardBackgroundColor">@color/primary_button_bg</item>
         <item name="cardCornerRadius">@dimen/corner_radius_large</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:textAppearance">@style/Theme.Ava.TextAppearance.Button</item>
+        <item name="android:textAppearance">@style/Theme.Table.TextAppearance.Button</item>
     </style>
 
     <style name="Theme.Table.Widget.EditText" parent="@android:style/Widget.EditText">
@@ -34,7 +34,7 @@
         <item name="android:lines">1</item>
         <item name="android:padding">@dimen/margin_small</item>
         <item name="android:textCursorDrawable">@drawable/app_cursor</item>
-        <item name="android:textAppearance">@style/Theme.Ava.TextAppearance.UI14R</item>
+        <item name="android:textAppearance">@style/Theme.Table.TextAppearance.UI14R</item>
         <item name="android:background">@drawable/input_field_background</item>
         <item name="android:textColorHint">@color/input_field_hint</item>
         <item name="android:includeFontPadding">false</item>
@@ -43,7 +43,7 @@
     <style name="Theme.Table.Widget.TextInputLayout" parent="">
         <item name="boxBackgroundMode">none</item>
         <item name="errorEnabled">true</item>
-        <item name="errorTextAppearance">@style/Theme.Ava.TextAppearance.UI12R</item>
+        <item name="errorTextAppearance">@style/Theme.Table.TextAppearance.UI12R</item>
         <item name="editTextColor">?attr/colorError</item>
         <item name="hintEnabled">false</item>
     </style>
