--- a/modules/features/feature_booking/src/main/res/layout/list_item_placeholder.xml
+++ b/modules/features/feature_booking/src/main/res/layout/list_item_placeholder.xml
@@ -21,7 +21,7 @@
         android:layout_marginTop="@dimen/margin_normal"
         android:gravity="center"
         android:text="@string/booking_empty_list_signature"
-        android:textAppearance="@style/Theme.Ava.TextAppearance.UI16R"
+        android:textAppearance="@style/Theme.Table.TextAppearance.UI16R"
         android:textColor="?attr/colorControlNormal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,7 +34,7 @@
         android:layout_marginVertical="@dimen/margin_teeny"
         android:paddingVertical="@dimen/margin_teeny"
         android:text="@string/booking_book_here"
-        android:textAppearance="@style/Theme.Ava.TextAppearance.UI14SB"
+        android:textAppearance="@style/Theme.Table.TextAppearance.UI14SB"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
