--- a/modules/features/feature_booking/src/main/res/layout/list_item_subtitle.xml
+++ b/modules/features/feature_booking/src/main/res/layout/list_item_subtitle.xml
@@ -4,6 +4,6 @@
     android:id="@+id/subtitle"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:textAppearance="@style/Theme.Ava.TextAppearance.UI16L"
+    android:textAppearance="@style/Theme.Table.TextAppearance.UI16L"
     android:textColor="?attr/colorControlNormal"
     tools:text="@string/booking_subtitle" />
