--- a/modules/features/feature_booking/src/main/res/layout/list_item_title.xml
+++ b/modules/features/feature_booking/src/main/res/layout/list_item_title.xml
@@ -4,5 +4,5 @@
     android:id="@+id/title"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:textAppearance="@style/Theme.Ava.TextAppearance.UI30SB"
+    android:textAppearance="@style/Theme.Table.TextAppearance.UI30SB"
     tools:text="@string/booking_title" />
