--- a/modules/features/feature_greeting/src/main/res/layout/fragment_greeting.xml
+++ b/modules/features/feature_greeting/src/main/res/layout/fragment_greeting.xml
@@ -21,7 +21,7 @@
         android:layout_marginTop="@dimen/margin_xlarge"
         android:gravity="center"
         android:text="@string/greeting_title"
-        android:textAppearance="@style/Theme.Ava.TextAppearance.UI30SB"
+        android:textAppearance="@style/Theme.Table.TextAppearance.UI30SB"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/workspace" />
@@ -33,7 +33,7 @@
         android:layout_marginTop="@dimen/margin_medium"
         android:gravity="center"
         android:text="@string/greeting_signature"
-        android:textAppearance="@style/Theme.Ava.TextAppearance.UI16L"
+        android:textAppearance="@style/Theme.Table.TextAppearance.UI16L"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title" />
