--- a/modules/features/feature_home/src/main/res/layout/fragment_home.xml
+++ b/modules/features/feature_home/src/main/res/layout/fragment_home.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="@dimen/margin_large"
         android:layout_marginTop="@dimen/margin_large"
         android:text="@string/home_title"
-        android:textAppearance="@style/Theme.Ava.TextAppearance.UI30SB"
+        android:textAppearance="@style/Theme.Table.TextAppearance.UI30SB"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -24,7 +24,7 @@
         android:layout_marginStart="@dimen/margin_large"
         android:layout_marginTop="@dimen/margin_tiny"
         android:text="@string/home_subtitle"
-        android:textAppearance="@style/Theme.Ava.TextAppearance.UI16L"
+        android:textAppearance="@style/Theme.Table.TextAppearance.UI16L"
         android:textColor="?attr/colorControlNormal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title" />
@@ -41,7 +41,7 @@
         android:focusable="true"
         android:padding="@dimen/margin_large"
         android:text="@string/home_meeting_room_title"
-        android:textAppearance="@style/Theme.Ava.TextAppearance.UI20SB"
+        android:textAppearance="@style/Theme.Table.TextAppearance.UI20SB"
         app:layout_constraintBottom_toTopOf="@id/private_booth"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,7 +60,7 @@
         android:gravity="bottom"
         android:padding="@dimen/margin_large"
         android:text="@string/home_private_booth_title"
-        android:textAppearance="@style/Theme.Ava.TextAppearance.UI20SB"
+        android:textAppearance="@style/Theme.Table.TextAppearance.UI20SB"
         app:layout_constraintBottom_toTopOf="@id/lounge"
         app:layout_constraintEnd_toStartOf="@id/break_out"
         app:layout_constraintStart_toStartOf="parent"
@@ -79,7 +79,7 @@
         android:gravity="end"
         android:padding="@dimen/margin_large"
         android:text="@string/home_break_out_title"
-        android:textAppearance="@style/Theme.Ava.TextAppearance.UI20M"
+        android:textAppearance="@style/Theme.Table.TextAppearance.UI20M"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="@id/private_booth"
         app:layout_constraintEnd_toEndOf="parent"
@@ -98,7 +98,7 @@
         android:gravity="center"
         android:padding="@dimen/margin_large"
         android:text="@string/home_lounge_title"
-        android:textAppearance="@style/Theme.Ava.TextAppearance.UI20M"
+        android:textAppearance="@style/Theme.Table.TextAppearance.UI20M"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
