--- a/modules/features/feature_registration/src/main/res/layout/fragment_registration.xml
+++ b/modules/features/feature_registration/src/main/res/layout/fragment_registration.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="77dp"
         android:text="@string/register_title"
-        android:textAppearance="@style/Theme.Ava.TextAppearance.UI30SB"
+        android:textAppearance="@style/Theme.Table.TextAppearance.UI30SB"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -28,7 +28,7 @@
         android:gravity="center"
         android:lineSpacingExtra="4sp"
         android:text="@string/register_signature"
-        android:textAppearance="@style/Theme.Ava.TextAppearance.UI16L"
+        android:textAppearance="@style/Theme.Table.TextAppearance.UI16L"
         android:textColor="?attr/colorControlNormal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -71,7 +71,7 @@
         android:layout_marginTop="@dimen/margin_normal"
         app:counterEnabled="true"
         app:counterMaxLength="@integer/register_password_max_length"
-        app:counterTextAppearance="@style/Theme.Ava.TextAppearance.UI12R"
+        app:counterTextAppearance="@style/Theme.Table.TextAppearance.UI12R"
         app:endIconMode="password_toggle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -93,7 +93,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_xlarge"
-        android:background="@drawable/bg_sign_up_button"
+        android:background="@drawable/sign_up_button_background"
         android:paddingVertical="@dimen/margin_teeny"
         android:src="@drawable/ic_google"
         app:layout_constraintEnd_toStartOf="@id/sign_up_via_git_hub"
@@ -106,7 +106,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/margin_medium"
-        android:background="@drawable/bg_sign_up_button"
+        android:background="@drawable/sign_up_button_background"
         android:paddingVertical="@dimen/margin_teeny"
         android:src="@drawable/ic_github"
         app:layout_constraintBottom_toBottomOf="@id/sign_up_via_google"
@@ -118,7 +118,7 @@
         android:id="@+id/sign_up_via_facebook"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_sign_up_button"
+        android:background="@drawable/sign_up_button_background"
         android:paddingVertical="@dimen/margin_teeny"
         android:src="@drawable/ic_facebook"
         app:layout_constraintBottom_toBottomOf="@id/sign_up_via_google"
