--- a/modules/features/feature_settings/src/main/res/layout/fragment_settings.xml
+++ b/modules/features/feature_settings/src/main/res/layout/fragment_settings.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="@dimen/margin_large"
         android:layout_marginTop="@dimen/margin_large"
         android:text="@string/settings_title"
-        android:textAppearance="@style/Theme.Ava.TextAppearance.UI30SB"
+        android:textAppearance="@style/Theme.Table.TextAppearance.UI30SB"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -24,7 +24,7 @@
         android:layout_marginStart="@dimen/margin_large"
         android:layout_marginTop="@dimen/margin_xlarge"
         android:text="@string/settings_dark_theme_title"
-        android:textAppearance="@style/Theme.Ava.TextAppearance.UI16M"
+        android:textAppearance="@style/Theme.Table.TextAppearance.UI16M"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title" />
 
@@ -44,7 +44,7 @@
         android:layout_marginStart="@dimen/margin_large"
         android:layout_marginTop="@dimen/margin_normal"
         android:text="@string/settings_log_out_title"
-        android:textAppearance="@style/Theme.Ava.TextAppearance.UI16M"
+        android:textAppearance="@style/Theme.Table.TextAppearance.UI16M"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/dark_theme_title" />
 
