--- a/modules/features/feature_home/src/main/res/layout/fragment_home.xml
+++ b/modules/features/feature_home/src/main/res/layout/fragment_home.xml
@@ -36,12 +36,13 @@
         android:layout_marginHorizontal="@dimen/margin_teeny"
         android:layout_marginTop="@dimen/margin_medium"
         android:background="@drawable/room_background"
-        android:backgroundTint="@color/gallery"
+        android:backgroundTint="@color/juniper"
         android:clickable="true"
         android:focusable="true"
         android:padding="@dimen/margin_large"
         android:text="@string/home_meeting_room_title"
         android:textAppearance="@style/Theme.Table.TextAppearance.UI20SB"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@id/private_booth"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,13 +55,14 @@
         android:layout_height="0dp"
         android:layout_marginStart="@dimen/margin_teeny"
         android:background="@drawable/room_background"
-        android:backgroundTint="@color/portafino"
+        android:backgroundTint="@color/shuttle_gray"
         android:clickable="true"
         android:focusable="true"
         android:gravity="bottom"
         android:padding="@dimen/margin_large"
         android:text="@string/home_private_booth_title"
         android:textAppearance="@style/Theme.Table.TextAppearance.UI20SB"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@id/lounge"
         app:layout_constraintEnd_toStartOf="@id/break_out"
         app:layout_constraintStart_toStartOf="parent"
@@ -73,7 +75,7 @@
         android:layout_height="0dp"
         android:layout_marginEnd="@dimen/margin_teeny"
         android:background="@drawable/room_background"
-        android:backgroundTint="@color/blue_ribbon"
+        android:backgroundTint="@color/outer_space"
         android:clickable="true"
         android:focusable="true"
         android:gravity="end"
@@ -92,12 +94,12 @@
         android:layout_height="0dp"
         android:layout_marginHorizontal="@dimen/margin_teeny"
         android:background="@drawable/room_background"
-        android:backgroundTint="@color/cod_gray"
+        android:backgroundTint="@color/woodsmoke"
         android:clickable="true"
         android:focusable="true"
         android:gravity="center"
         android:padding="@dimen/margin_large"
-        android:text="@string/home_lounge_title"
+        android:text="@string/home_open_space_title"
         android:textAppearance="@style/Theme.Table.TextAppearance.UI20M"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
