--- a/modules/base/base_ui/src/main/res/values/styles.xml
+++ b/modules/base/base_ui/src/main/res/values/styles.xml
@@ -47,4 +47,24 @@
         <item name="editTextColor">?attr/colorError</item>
         <item name="hintEnabled">false</item>
     </style>
+
+    <style name="Theme.Table.Widget.BottomSheet" parent="Widget.MaterialComponents.BottomSheet.Modal">
+        <item name="shapeAppearanceOverlay">@style/ShapeAppearance.Table.BottomSheet</item>
+        <item name="backgroundTint">?attr/colorBackground</item>
+    </style>
+    
+    <style name="Theme.Table.TextView.DateField" parent="">
+        <item name="android:background">@drawable/date_field_background</item>
+        <item name="android:drawableTint">@color/cod_gray</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:textAppearance">@style/Theme.Table.TextAppearance.UI14R</item>
+    </style>
+
+    <style name="Theme.Table.TextView.DateField.Day">
+        <item name="android:drawableEnd">@drawable/ic_calendar</item>
+    </style>
+
+    <style name="Theme.Table.TextView.DateField.Hour">
+        <item name="android:drawableEnd">@drawable/ic_stopwatch</item>
+    </style>
 </resources>
