--- a/modules/features/feature_home/src/main/res/layout/fragment_home.xml
+++ b/modules/features/feature_home/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.demonstration.table.featurehome.HomeFragment">
+    tools:context="com.demonstration.table.featurehome.ui.home.HomeFragment">
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/title"
