--- a/modules/base/base_ui/src/main/res/drawable/date_field_background.xml
+++ b/modules/base/base_ui/src/main/res/drawable/date_field_background.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="@dimen/corner_radius_normal" />
-    <stroke
-        android:width="1dp"
-        android:color="@color/mercury" />
-    <padding
-        android:bottom="@dimen/margin_small"
-        android:left="@dimen/margin_small"
-        android:right="@dimen/margin_small"
-        android:top="@dimen/margin_small" />
-</shape>
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="?attr/rippleColor">
+    <item>
+        <shape>
+            <corners android:radius="@dimen/corner_radius_normal" />
+            <stroke
+                android:width="1dp"
+                android:color="@color/mercury" />
+            <solid android:color="?attr/colorBackground" />
+            <padding
+                android:bottom="@dimen/margin_small"
+                android:left="@dimen/margin_small"
+                android:right="@dimen/margin_small"
+                android:top="@dimen/margin_small" />
+        </shape>
+    </item>
+</ripple>
