--- a/modules/features/feature_container/src/main/res/layout/activity_table.xml
+++ b/modules/features/feature_container/src/main/res/layout/activity_table.xml
@@ -21,11 +21,9 @@
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/fragment_container"
-        app:menu="@menu/bottom_navigation_menu"
-        tools:visibility="visible" />
+        app:menu="@menu/bottom_navigation_menu" />
 
     <include layout="@layout/layout_splash" />
 </androidx.constraintlayout.widget.ConstraintLayout>
