--- a/modules/features/feature_home/src/main/res/layout/fragment_home.xml
+++ b/modules/features/feature_home/src/main/res/layout/fragment_home.xml
@@ -63,7 +63,7 @@
         android:text="@string/home_private_booth_title"
         android:textAppearance="@style/Theme.Table.TextAppearance.UI20SB"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@id/lounge"
+        app:layout_constraintBottom_toTopOf="@id/open_space"
         app:layout_constraintEnd_toStartOf="@id/break_out"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/meeting_room"
@@ -89,7 +89,7 @@
         app:layout_constraintTop_toTopOf="@id/private_booth" />
 
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/lounge"
+        android:id="@+id/open_space"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginHorizontal="@dimen/margin_teeny"
