Add WorkspaceSelectionView.kt, did fixes with package naming

--- a/modules/base/base_table/src/main/res/navigation/progress_nav_graph.xml
+++ b/modules/base/base_table/src/main/res/navigation/progress_nav_graph.xml
@@ -7,7 +7,7 @@
 
     <dialog
         android:id="@+id/progressFragment"
-        android:name="com.demostration.table.basetable.dialogs.ProgressFragment"
+        android:name="com.demonstration.table.basetable.dialogs.ProgressFragment"
         android:label="ProgressFragment"
         tools:layout="@layout/dialog_progress">
 
