--- a/modules/features/feature_settings/src/main/res/navigation/settings_nav_graph.xml
+++ b/modules/features/feature_settings/src/main/res/navigation/settings_nav_graph.xml
@@ -8,7 +8,7 @@
 
     <fragment
         android:id="@+id/settingsFragment"
-        android:name="com.demonstrations.table.featuresettings.SettingsFragment"
+        android:name="com.demonstration.table.featuresettings.SettingsFragment"
         android:label="SettingsFragment"
         tools:layout="@layout/fragment_settings">
 
