--- a/modules/features/feature_signin/src/main/res/layout/fragment_sign_in.xml
+++ b/modules/features/feature_signin/src/main/res/layout/fragment_sign_in.xml
@@ -38,7 +38,7 @@
         android:imeOptions="actionNext"
         android:inputType="phone" />
 
-    <com.example.baseui.widgets.NoChangingBackgroundTextInputLayout
+    <com.demonstration.baseui.widgets.widgets.NoChangingBackgroundTextInputLayout
         android:id="@+id/password_container"
         style="@style/Theme.Table.Widget.TextInputLayout"
         android:layout_width="match_parent"
@@ -57,7 +57,7 @@
             android:hint="@string/sign_in_password_hint"
             android:imeOptions="actionDone"
             android:inputType="textPassword" />
-    </com.example.baseui.widgets.NoChangingBackgroundTextInputLayout>
+    </com.demonstration.baseui.widgets.widgets.NoChangingBackgroundTextInputLayout>
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/recovery_title"
