--- a/modules/base/base_ui/src/main/res/values/themes.xml
+++ b/modules/base/base_ui/src/main/res/values/themes.xml
@@ -41,7 +41,7 @@
         <item name="bottomSheetStyle">@style/Theme.Table.Widget.BottomSheet</item>
         <item name="android:windowIsFloating">false</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:windowLightStatusBar">true</item>
+        <item name="android:windowLightStatusBar">false</item>
         <item name="android:navigationBarColor">?attr/colorBackground</item>
         <item name="android:navigationBarDividerColor" tools:targetApi="o_mr1">
             ?attr/colorBackground
