--- a/modules/features/feature_container/src/main/res/layout/activity_table.xml
+++ b/modules/features/feature_container/src/main/res/layout/activity_table.xml
@@ -25,5 +25,5 @@
         app:layout_constraintTop_toBottomOf="@id/fragment_container"
         app:menu="@menu/bottom_navigation_menu" />
 
-    <include layout="@layout/layout_splash" />
+<!--    <include layout="@layout/layout_splash" />-->
 </androidx.constraintlayout.widget.ConstraintLayout>
